tests/MathML/basic/bad/mtable1.mml
<math xmlns="http://www.w3.org/1998/Math/MathML"><mtable columnalign="right left center" rowlines="solid none" equalrows="false" frame="solid" framespacing="1em 2ex"><mtr><mn>1111.23</mn><mn>0</mn><mn>0</mn></mtr><mtr><mn>0</mn><mn>1123</mn><mn>0</mn></mtr><mtr><mn>0.2</mn><mn>0</mn><mn>1123</mn></mtr></mtable></math>